--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project(GoodnightWorldLibrary VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_library(GoodnightWorldLibrary goodnight.cpp goodnight.h)
+set(Demo Demo)
 
-install(TARGETS GoodnightWorldLibrary DESTINATION lib)
-install(FILES goodnight.h DESTINATION include)
+include_directories(lib)
+
+add_library(${CMAKE_PROJECT_NAME} goodnight.cpp goodnight.h)
+
+add_executable(${Demo} main.cpp)
+target_link_libraries(${Demo} ${CMAKE_PROJECT_NAME})
