Added Install Path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(lib)
 add_subdirectory(lib)
 
+install(FILES goodnight.h goodnight.cpp DESTINATION include)
+
 add_executable(Demo main.cpp)
 target_link_libraries(Demo ${CMAKE_PROJECT_NAME})
